packages/svelte/tests/compiler-errors/samples/runes-props-id-invalid-placement/main.svelte
<script>

	async function getData() {
		return 0;
	}
	
	const v = await getData();
	const uid = $props.id();
</script>
